ProxyGenBench simplification